<fix> toggle button mobile centered, color p darkmode, lightmode default

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     --clr-neutral-200: #F7F7F7;
     --clr-neutral-400: #999999;
     --clr-neutral-600: #6C7C9A;
+    --clr-neutral-700: #3C3C3C;
     --clr-neutral-800: #273A40;
     --clr-neutral-900: #1A2E35;
 
@@ -104,7 +105,6 @@ header {
     margin-inline: auto;
 
     display: flex;
-    justify-content: space-between;
     align-items: center;
 
     padding: 1.75rem 0;
@@ -129,58 +129,11 @@ header {
     background-color: var(--clr-neutral-200);
 }
 
-@media (max-width: 900px) {
-    .hamburger {
-        display: block;
-    }
-
-    .hamburger.active .bar:nth-child(2) {
-        opacity: 0;
-    }
-    .hamburger.active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-    }
-    .hamburger.active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-    }
-
-    .header-nav__wrapper {
-        position: fixed;
-        left: -100%;
-        top: 86px;
-
-        gap: 1rem;
-        flex-direction: column;
-        align-items: center;
-        padding-bottom: 2rem;
-
-        background-color: var(--clr-neutral-200);
-        width: 100%;
-        text-align: center;
-        transition: 0.3s;
-    }
-
-    .dark .header-nav__wrapper {
-        background-color: var(--clr-neutral-800);
-    }
-
-    .header-nav ul {
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .header-nav ul li a {
-        font-size: 2rem;
-    }
-
-    .header-nav__wrapper.active {
-        left: 0;
-    }
-}
-
 .header-nav__wrapper {
     display: flex;
     gap: 2rem;
+    margin-left: auto;
+    margin-right: 2rem;
 }
 
 .header-nav ul {
@@ -219,6 +172,66 @@ header {
 
 .header-nav li:hover a:before {
     width: 100%;
+}
+
+@media (max-width: 900px) {
+    .hamburger {
+        display: block;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .header-wrapper {
+        justify-content: space-between;
+        position: relative;
+    }
+
+    .header-nav__wrapper {
+        position: fixed;
+        left: -100%;
+        top: 86px;
+
+        gap: 1rem;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 2rem;
+
+        background-color: var(--clr-neutral-200);
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+    }
+
+    .dark .header-nav__wrapper {
+        background-color: var(--clr-neutral-800);
+    }
+
+    .header-nav ul {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .header-nav ul li a {
+        font-size: 2rem;
+    }
+
+    .header-nav__wrapper.active {
+        left: 0;
+    }
+
+    .header-toggle__wrapper {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
 
 @media (max-width: 600px) {
@@ -289,6 +302,7 @@ header {
 	color: #f39c12;
     font-size: 0.875rem;
 }
+
 
 /** ------------
   Modal dialog
@@ -874,9 +888,13 @@ dialog > * {
 .liberte-content p {
     font-size: 0.9rem;
     line-height: 1.5;
-    color: var(--clr-neutral-400);
+    color: var(--clr-neutral-700);
     max-width: 55ch;
     padding-bottom: 0.5rem;
+}
+
+.dark .liberte-content p {
+    color: var(--clr-neutral-200);
 }
 
 .liberte-img { 
@@ -1182,16 +1200,21 @@ footer {
 
 .section-cta p {
     font-size: 1rem;
-    color: var(--clr-neutral-400);
+    color: var(--clr-neutral-700);
     max-width: 60ch;
     line-height: 1.8;
 }
 
 .section-cta .content {
     font-size: 1rem;
-    color: var(--clr-neutral-400);
+    color: var(--clr-neutral-700);
     max-width: 57ch;
     line-height: 2;
+}
+
+.dark .section-cta p,
+.dark .section-cta .content {
+    color: var(--clr-neutral-200);
 }
 
 @media (max-width: 900px) {
